--- a/portraits-viz.qmd
+++ b/portraits-viz.qmd
@@ -355,7 +355,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">Ans en cest mont ne en cest renne.<br></span>
 <span class="verse-line"><span class="line-number">154</span><span class="negation">Ne</span> vit <span class="negation">nuz</span> hom plus bele femme<br></span>
 <span class="verse-line"><span class="negation">Onques</span> duçoise <span class="negation">ne</span> roine.<br></span>
-<span class="verse-line"><span class="negation">ne n'</span>ot el cief plus bele crine<br></span>
+<span class="verse-line"><span class="negation">nen</span> ot el cief plus bele crine<br></span>
 <span class="verse-line">Reondes avoit les orelhes.<br></span>
 <span class="verse-line">Mais <span class="color-word">blanches</span> erent a mervelhes<br></span>
 <span class="verse-line"><span class="line-number">159</span>Les sorciz <span class="color-word">noirs</span> & avenanz.<br></span>
