--- a/portraits.qmd
+++ b/portraits.qmd
@@ -336,7 +336,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">Ans en cest mont ne en cest renne.<br></span>
 <span class="verse-line"><span class="line-number">154</span>Ne vit nuz hom plus bele femme<br></span>
 <span class="verse-line">Onques duçoise ne roine.<br></span>
-<span class="verse-line">ne n'ot el cief plus bele crine<br></span>
+<span class="verse-line">nen ot el cief plus bele crine<br></span>
 <span class="verse-line">Reondes avoit les orelhes.<br></span>
 <span class="verse-line">Mais blanches erent a mervelhes<br></span>
 <span class="verse-line"><span class="line-number">159</span>Les sorciz noirs & avenanz.<br></span>
